[gd_scene load_steps=7 format=3 uid="uid://dnd3m42gc1re8"]

[ext_resource type="Script" path="res://characters/sweeper.gd" id="1_hdnh7"]

[sub_resource type="CylinderMesh" id="CylinderMesh_gykdj"]
height = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_ahg1o"]
top_radius = 0.1
bottom_radius = 0.1

[sub_resource type="PrismMesh" id="PrismMesh_3ilbd"]
size = Vector3(0.3, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_k7h5i"]
size = Vector3(2.36076, 0.969094, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_5kffx"]
size = Vector3(1, 0.473651, 0.343884)

[node name="Sweeper" type="Node3D" groups=["bodies"]]
script = ExtResource("1_hdnh7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 0)
mesh = SubResource("CylinderMesh_gykdj")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -1)
mesh = SubResource("CylinderMesh_ahg1o")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1.84732e-08, 3.9616e-08, 1, 0.906308, -0.422618, 0, 0.422618, 0.906308, -4.37114e-08, 0, 0.154689, -1.8709)
mesh = SubResource("PrismMesh_3ilbd")

[node name="SpawnTrash" type="Node3D" parent="."]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, -4)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.21935)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.404109)
shape = SubResource("BoxShape3D_k7h5i")
disabled = true

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.031)
target_position = Vector3(0, 0, -5)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]

[node name="RigidBody3d" type="RigidBody3D" parent="."]
freeze = true

[node name="CollisionShape3d" type="CollisionShape3D" parent="RigidBody3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.129768, -1.90109)
shape = SubResource("BoxShape3D_5kffx")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
